Jump to note: Fix alignment of autocomplete

--- a/src/modals/general.less
+++ b/src/modals/general.less
@@ -57,3 +57,8 @@
 
     }    
 }
+
+.algolia-autocomplete .aa-dropdown-menu {
+    font-size: var(--tree-font-size) !important;
+    padding-left: 1px !important;
+}
